--- a/bootIndex.html
+++ b/bootIndex.html
@@ -23,32 +23,51 @@
 <body>
 
 <div class="container-fluid">
-  <h1>Taxonomy Browser</h1>
-  <p>Select Specimens for visualization using de right mouse button</p>
-  <div class="row">
-    <div class="col-sm-4" style="background-color:lavender;">
-        <img name="addButton" src="images/add.png" width="64" height="64" border="0" alt="javascript button" onClick="return addNode();">
-        <img name="editButton" src="images/edit3.png" width="64" height="64" border="0" alt="javascript button" onClick="return editNode();">
-        <img name="removeButton" src="images/remove.png" width="64" height="64" border="0" alt="javascript button" onClick="return removeNode();">
-    </div>
-    <div class="col-sm-8" style="background-color:lavenderblush;">
-        <h1>Visualization</h1>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-4"  id="viz" style="background-color:lavenderblush;">
-        <!--<div id="viz"></div>-->
-    </div>
-    <div class="col-sm-8" style="background-color:lavender;">
-        <div id="sel_viz"></div>
-    </div>
-    
-  </div>
+	<h1>Taxonomy Browser</h1>
+	<p>Select Specimens for visualization using de right mouse button</p>
+	<div class="row">
+		<div class="col-sm-4" ></div>
+		<div class="col-sm-2" style="background-color:lavender;webkit-border-radius: 11px;border-radius: 15px;">
+		
+			<img name="addButton" data-toggle="modal" data-target="#basicModal" src="images/add.png" width="64" height="64" border="0" alt="javascript button" onClick="return addNode();">
+			<img name="editButton" src="images/edit3.png" width="64" height="64" border="0" alt="javascript button" onClick="return editNode();">
+			<img name="removeButton" src="images/remove.png" width="64" height="64" border="0" alt="javascript button" onClick="return removeNode();">
+			
+		</div>
+		<div class="col-sm-6" ></div>
+	</div>
+	
+	<div class="row">
+		<div class="col-sm-6"  id="viz">
+		</div>
+		<div class="col-sm-6">
+			<div id="sel_viz"></div>
+		</div>
+	</div>
 </div>
 
+<!-- TOOLTIP -->
 <div id="tooltip" class="hidden">
     <p><strong><span id="name">100</span></strong></p>
     <p><span id="value">100</span></p>
+</div>
+
+<!-- POPUP MODAL -->
+<div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h4 class="modal-title" id="myModalLabel">Add Specimen</h4>
+            </div>
+            <div class="modal-body">
+                <h3>properties here</h3>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+    </div>
+  </div>
 </div>
 
 <script>
