--- a/bootIndex.html
+++ b/bootIndex.html
@@ -25,6 +25,7 @@
 	
     <!-- MAP -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpZxJKdEeziVgiM26XP7sh51GwmtBpPBg"type="text/javascript"></script>
+    <!--<script language="javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true&v=3"></script>-->
     
 	<!-- TOOLTIP -->
 	<link href="tooltip/jquery.toolbar.css" rel="stylesheet" />
