--- a/bootIndex.html
+++ b/bootIndex.html
@@ -89,7 +89,9 @@
 	<!-- VISUALIZATIONS -->
 	<div class="row">
 		<div class="col-sm-6"  id="viz" style="text-align:center"></div>
-		<div class="col-sm-6" id="sel_viz" style="text-align:center">
+		<div class="col-sm-6" id="right_viz" style="text-align:center">
+            <div id="sel_viz"> </div>
+            <div id="maps"> </div>
 		</div>
 			
 	</div>
