--- a/TESTE.html
+++ b/TESTE.html
@@ -1,25 +1,66 @@
-<!doctype html>
-<html lang="en-US">
-<head>
-  <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-  <title>Popup Toolbar Icons Demo</title>
-  <meta name="author" content="Jake Rocheleau">
-  <link rel="shortcut icon" href="http://teamtreehouse.com/assets/favicon.ico">
-  <link rel="icon" href="http://teamtreehouse.com/assets/favicon.ico">
-  <link rel="stylesheet" type="text/css" media="all" href="css/styles.css">
-  <link rel="stylesheet" type="text/css" media="all" href="tooltip/jquery.toolbars.css">
-  <link rel="stylesheet" type="text/css" media="all" href="css/bootstrap.icons.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script type="text/javascript" src="js/jquery.toolbar.min.js"></script>
-</head>
+<!DOCTYPE html>
+<meta charset="utf-8">
+<style>
 
-<img name="addButton" src="images/add.png" width="64" height="64" border="0" alt="javascript button" onClick="return addNode();">
-<img name="editButton" src="images/edit3.png" width="64" height="64" border="0" alt="javascript button" onClick="return editNode();">
-<img name="removeButton" src="images/remove.png" width="64" height="64" border="0" alt="javascript button" onClick="return removeNode();">
+text {
+  font: 10px sans-serif;
+}
 
+</style>
+<body>
+<script src="http://d3js.org/d3.v3.min.js"></script>
 <script>
 
+var diameter = 960,
+    format = d3.format(",d"),
+    color = d3.scale.category20c();
+
+var bubble = d3.layout.pack()
+    .sort(null)
+    .size([diameter, diameter])
+    .padding(1.5);
+
+var svg = d3.select("body").append("svg")
+    .attr("width", diameter)
+    .attr("height", diameter)
+    .attr("class", "bubble");
+
+d3.json("flare.json", function(error, root) {
+  if (error) throw error;
+
+  var node = svg.selectAll(".node")
+      .data(bubble.nodes(classes(root))
+      .filter(function(d) { return !d.children; }))
+    .enter().append("g")
+      .attr("class", "node")
+      .attr("transform", function(d) { return "translate(" + d.x + "," + d.y + ")"; });
+
+  node.append("title")
+      .text(function(d) { return d.className + ": " + format(d.value); });
+
+  node.append("circle")
+      .attr("r", function(d) { return d.r; })
+      .style("fill", function(d) { return color(d.packageName); });
+
+  node.append("text")
+      .attr("dy", ".3em")
+      .style("text-anchor", "middle")
+      .text(function(d) { return d.className.substring(0, d.r / 3); });
+});
+
+// Returns a flattened hierarchy containing all leaf nodes under the root.
+function classes(root) {
+  var classes = [];
+
+  function recurse(name, node) {
+    if (node.children) node.children.forEach(function(child) { recurse(node.name, child); });
+    else classes.push({packageName: name, className: node.name, value: node.size});
+  }
+
+  recurse(null, root);
+  return {children: classes};
+}
+
+d3.select(self.frameElement).style("height", diameter + "px");
 
 </script>
-
-
