--- a/bootIndex.html
+++ b/bootIndex.html
@@ -20,6 +20,7 @@
 	<script type="text/javascript" src="events.js"></script>
 	<script type="text/javascript" src="dotsVisualization.js"></script>
 	<script type="text/javascript" src="mapVisualization.js"></script>
+	<script type="text/javascript" src="comboboxHandler.js"></script>
     
     <!--JQUERY-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
@@ -84,7 +85,9 @@
 			<img name="removeButton" src="images/remove.png" width="64" height="64" border="0" alt="javascript button" ><!--onClick="return removeNode();">-->
 			
 		</div>
-		<div class="col-sm-6" ></div>
+		<div class="col-sm-6"  id="comboboxes" style="text-align: right">
+
+		</div>
 	</div>
 	
 	<!-- VISUALIZATIONS -->
