--- a/bootIndex.html
+++ b/bootIndex.html
@@ -21,9 +21,10 @@
 	<script type="text/javascript" src="dotsVisualization.js"></script>
 	<script type="text/javascript" src="mapVisualization.js"></script>
 	<script type="text/javascript" src="comboboxHandler.js"></script>
+	<script type="text/javascript" src="popup.js"></script>
     
     <!--JQUERY-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>-->
 	
     <!-- MAP -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpZxJKdEeziVgiM26XP7sh51GwmtBpPBg"type="text/javascript"></script>
@@ -36,6 +37,7 @@
 </head>
 <body>
 
+<!-- MENU -->
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 	
 	<div class="navbar-header">
@@ -126,15 +128,15 @@
 <div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
-            <div class="modal-header">
-            <h4 class="modal-title" id="myModalLabel">Add Specimen</h4>
+            <div class="modal-header" id="hder">
+				<h4 class="modal-title" id="myModalLabel"></h4>
             </div>
-            <div class="modal-body">
-                <h3>properties here</h3>
+            <div class="modal-body" id="info-body">
+				<div id="info_text"></div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <!--<button type="button" class="btn btn-primary">Save changes</button>-->
         </div>
     </div>
   </div>
