--- a/bootIndex.html
+++ b/bootIndex.html
@@ -107,11 +107,11 @@
   <div class="row">
     <div class="col-sm-6" style="background-color:lavenderblush;"></div>
     <div class="col-sm-6" style="text-align:center">
-		<img name="bars" src="images/bars.png" width="128" height="95" border="0" alt="javascript button" onClick="return showBars();"style=" border: 2px solid yellow;border-radius: 22px;">
-        <img name="matrix" src="images/matriz.png" width="128" height="95" border="0" alt="javascript button" onClick="return addNode();"style=" border: 2px solid #6D6D6D;border-radius: 22px;">
-		<img name="coord" src="images/coord.png" width="128" height="95" border="0" alt="javascript button" onClick="return addNode();"style=" border: 2px solid #6D6D6D;border-radius: 22px;" >
-		<img name="dots" src="images/bullets.png" width="128" height="95" border="0" alt="javascript button" onClick="return showDots();"style=" border: 2px solid #6D6D6D;border-radius: 22px;">
-		<img name="map" src="images/map.png" width="128" height="95" border="0" alt="javascript button" onClick="return showMap();"style=" border: 2px solid #6D6D6D;border-radius: 22px;">
+		<img name="bars" src="images/bars.png" width="200" height="150" border="0" alt="javascript button" onClick="return showBars();"style=" border: 2px solid yellow;border-radius: 22px;">
+        <img name="matrix" src="images/matriz.png" width="200" height="150" border="0" alt="javascript button" onClick="return addNode();"style=" border: 2px solid #6D6D6D;border-radius: 22px;">
+		<img name="coord" src="images/coord.png" width="200" height="150" border="0" alt="javascript button" onClick="return addNode();"style=" border: 2px solid #6D6D6D;border-radius: 22px;" >
+		<img name="dots" src="images/bullets.png" width="200" height="150" border="0" alt="javascript button" onClick="return showDots();"style=" border: 2px solid #6D6D6D;border-radius: 22px;">
+		<img name="map" src="images/map.png" width="200" height="150" border="0" alt="javascript button" onClick="return showMap();"style=" border: 2px solid #6D6D6D;border-radius: 22px;">
 	</div>
   
 </div>
@@ -119,10 +119,11 @@
 <!-- TOOLTIP -->
 <div id="tooltip" class="hidden">
     <p><strong><span id="name">100</span></strong></p>
-    <p><span id="value">100</span></p>
+	<img name="infoButton" data-toggle="modal" data-target="#basicModal" src="images/info.png" width="32" height="32" border="0" alt="javascript button" onClick="return showNodeInfo();">
     <img name="addButton" data-toggle="modal" data-target="#basicModal" src="images/add.png" width="32" height="32" border="0" alt="javascript button" onClick="return addNode();">
     <img name="editButton" src="images/edit3.png" width="32" height="32" border="0" alt="javascript button" onClick="return editNode();">
 	<img name="removeButton" src="images/remove.png" width="32" height="32" border="0" alt="javascript button" ><!--onClick="return removeNode();">-->
+	
 </div>
 
 <!-- POPUP MODAL -->
