melhorias diversas, ver descricao
- aumento dos icones dos graficos
- remoçao dos nodos com valor undefined no dotsviz
- mudança no texto do mapa p ingles (p ficar como o resto do programa)
- click no selviz abre info do especime

--- a/bootIndex.html
+++ b/bootIndex.html
@@ -80,7 +80,7 @@
 	<!-- SETTINGS -->
 	<div class="row">
 		<div class="col-sm-4" ></div>
-		<div class="col-sm-2" style="background-color:lavender;webkit-border-radius: 11px;border-radius: 15px;text-align: center">
+		<div class="col-sm-2" style="background-color:#75C9FF;webkit-border-radius: 11px;border-radius: 15px;text-align: center">
 		
 			<img name="addButton" data-toggle="modal" data-target="#basicModal" src="images/add.png" width="64" height="64" border="0" alt="javascript button" onClick="return addNode();">
 			<img name="editButton" src="images/edit3.png" width="64" height="64" border="0" alt="javascript button" onClick="return editNode();">
@@ -107,11 +107,11 @@
   <div class="row">
     <div class="col-sm-6" style="background-color:lavenderblush;"></div>
     <div class="col-sm-6" style="text-align:center">
-		<img name="bars" src="images/bars.png" width="200" height="150" border="0" alt="javascript button" onClick="return showBars();"style=" border: 2px solid yellow;border-radius: 22px;">
-        <img name="matrix" src="images/matriz.png" width="200" height="150" border="0" alt="javascript button" onClick="return addNode();"style=" border: 2px solid #6D6D6D;border-radius: 22px;">
-		<img name="coord" src="images/coord.png" width="200" height="150" border="0" alt="javascript button" onClick="return addNode();"style=" border: 2px solid #6D6D6D;border-radius: 22px;" >
-		<img name="dots" src="images/bullets.png" width="200" height="150" border="0" alt="javascript button" onClick="return showDots();"style=" border: 2px solid #6D6D6D;border-radius: 22px;">
-		<img name="map" src="images/map.png" width="200" height="150" border="0" alt="javascript button" onClick="return showMap();"style=" border: 2px solid #6D6D6D;border-radius: 22px;">
+		<img name="bars" src="images/bars.png" width="200" height="150" border="0" alt="javascript button" onClick="return showBars();"style= " border: 4px solid yellow;border-radius: 38px;" >
+        <img name="matrix" src="images/matriz.png" width="200" height="150" border="0" alt="javascript button" onClick="return addNode();"style=" border: 4px solid #6D6D6D;border-radius: 38px;" >
+		<img name="coord" src="images/coord.png" width="200" height="150" border="0" alt="javascript button" onClick="return addNode();"style=" border: 4px solid #6D6D6D;border-radius: 38px;"  >
+		<img name="dots" src="images/bullets.png" width="200" height="150" border="0" alt="javascript button" onClick="return showDots();"style=" border: 4px solid #6D6D6D;border-radius: 38px;" >
+		<img name="map" src="images/map.png" width="200" height="150" border="0" alt="javascript button" onClick="return showMap();"style=" border: 4px solid #6D6D6D;border-radius: 38px;" >
 	</div>
   
 </div>
