Limpeza de Arquivos + Melhorias
- tooltip na dotzViz
- nome nos eixos na dotzViz
- retirada de pontos sem o valor selecionado nas comboboxes da dotzViz
- melhorias no funcionamento das bolinhas dos especimes

--- a/bootIndex.html
+++ b/bootIndex.html
@@ -117,14 +117,13 @@
   
 </div>
 
-<!-- TOOLTIP -->
+<!-- TOOLTIPS -->
 <div id="tooltip" class="hidden">
     <p><strong><span id="name">100</span></strong></p>
 	<img name="infoButton" data-toggle="modal" data-target="#basicModal" src="images/info.png" width="32" height="32" border="0" alt="javascript button" onClick="return showNodeInfo();">
     <img name="addButton" data-toggle="modal" data-target="#basicModal" src="images/add.png" width="32" height="32" border="0" alt="javascript button" onClick="return addNode();">
     <img name="editButton" src="images/edit3.png" width="32" height="32" border="0" alt="javascript button" onClick="return editNode();">
 	<img name="removeButton" src="images/remove.png" width="32" height="32" border="0" alt="javascript button" ><!--onClick="return removeNode();">-->
-	
 </div>
 
 <!-- POPUP MODAL -->
