--- a/bootIndex.html
+++ b/bootIndex.html
@@ -23,6 +23,7 @@
 	<script type="text/javascript" src="comboboxHandler.js"></script>
 	<script type="text/javascript" src="popup.js"></script>
 	<script type="text/javascript" src="selectedSpecimens.js"></script>
+	<script type="text/javascript" src="parallelCoordinates.js"></script>
     
     <!--JQUERY-->
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>-->
@@ -80,7 +81,12 @@
 	
 	<!-- SETTINGS -->
 	<div class="row">
-		<div class="col-sm-4" ></div>
+		<div class="col-sm-4" >
+			<!--<form>
+			<label><input type="radio" name="mode" value="size"> By number of species </label>
+			<label><input type="radio" name="mode" value="count" checked> By number of specimens</label>
+			</form>-->
+		</div>
 		<div class="col-sm-2" style="background-color:#75C9FF;webkit-border-radius: 11px;border-radius: 15px;text-align: center">
 		
 			<img name="addButton" data-toggle="modal" data-target="#basicModal" src="images/add.png" width="64" height="64" border="0" alt="javascript button" onClick="return addNode();">
@@ -110,7 +116,7 @@
     <div class="col-sm-6" style="text-align:center">
 		<img name="bars" src="images/bars.png" width="200" height="150" border="0" alt="javascript button" onClick="return showBars();"style= " border: 4px solid yellow;border-radius: 38px;" >
         <img name="matrix" src="images/matriz.png" width="200" height="150" border="0" alt="javascript button" onClick="return addNode();"style=" border: 4px solid #6D6D6D;border-radius: 38px;" >
-		<img name="coord" src="images/coord.png" width="200" height="150" border="0" alt="javascript button" onClick="return addNode();"style=" border: 4px solid #6D6D6D;border-radius: 38px;"  >
+		<img name="coord" src="images/coord.png" width="200" height="150" border="0" alt="javascript button" onClick="return showParallelCoord();"style=" border: 4px solid #6D6D6D;border-radius: 38px;"  >
 		<img name="dots" src="images/bullets.png" width="200" height="150" border="0" alt="javascript button" onClick="return showDots();"style=" border: 4px solid #6D6D6D;border-radius: 38px;" >
 		<img name="map" src="images/map.png" width="200" height="150" border="0" alt="javascript button" onClick="return showMap();"style=" border: 4px solid #6D6D6D;border-radius: 38px;" >
 	</div>
@@ -120,7 +126,7 @@
 <!-- TOOLTIPS -->
 <div id="tooltip" class="hidden">
     <p><strong><span id="name">100</span></strong></p>
-	<img name="infoButton" data-toggle="modal" data-target="#basicModal" src="images/info.png" width="32" height="32" border="0" alt="javascript button" onClick="return showNodeInfo();">
+	<!--<img name="infoButton" data-toggle="modal" data-target="#basicModal" src="images/info.png" width="32" height="32" border="0" alt="javascript button" onClick="return showNodeInfo();">
     <img name="addButton" data-toggle="modal" data-target="#basicModal" src="images/add.png" width="32" height="32" border="0" alt="javascript button" onClick="return addNode();">
     <img name="editButton" src="images/edit3.png" width="32" height="32" border="0" alt="javascript button" onClick="return editNode();">
 	<img name="removeButton" src="images/remove.png" width="32" height="32" border="0" alt="javascript button" ><!--onClick="return removeNode();">-->
