função de hide e show das comboboxes + novas combos pra o parallelcoordsviz

--- a/bootIndex.html
+++ b/bootIndex.html
@@ -94,7 +94,7 @@
 			<img name="removeButton" src="images/remove.png" width="64" height="64" border="0" alt="javascript button" ><!--onClick="return removeNode();">-->
 			
 		</div>
-		<div class="col-sm-6"  id="comboboxes" style="text-align: right">
+		<div class="col-sm-6"  id="comboboxes" style="text-align: center">
 
 		</div>
 	</div>
@@ -151,10 +151,19 @@
 </div>
 
 <script>
+
     var comboX;
     var comboY;
     var comboSize;
     var comboColor;
+	
+	var combo1;
+	var combo2;
+	var combo3;
+	var combo4;
+	var combo5;
+	var combo6;
+	
     var selection = [];
 	
 	var svg_selected = d3.select("#sel_viz").append("svg")
