icone do filter e janela

--- a/bootIndex.html
+++ b/bootIndex.html
@@ -39,7 +39,7 @@
 </head>
 <body>
 
-<!-- MENU -->
+<!-- MENU 
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 	
 	<div class="navbar-header">
@@ -72,12 +72,12 @@
 		</div>
 		
 	</div>
-</div>
+</div>-->
 
 
 <div class="container-fluid">
 
-	<h1> - </h1>
+	<h2>  </h2>
 	
 	<!-- SETTINGS -->
 	<div class="row">
@@ -89,9 +89,9 @@
 		</div>
 		<div class="col-sm-2" style="background-color:#75C9FF;webkit-border-radius: 11px;border-radius: 15px;text-align: center">
 		
-			<img name="addButton" data-toggle="modal" data-target="#basicModal" src="images/add.png" width="64" height="64" border="0" alt="javascript button" onClick="return addNode();">
-			<img name="editButton" src="images/edit3.png" width="64" height="64" border="0" alt="javascript button" onClick="return editNode();">
-			<img name="removeButton" src="images/remove.png" width="64" height="64" border="0" alt="javascript button" ><!--onClick="return removeNode();">-->
+			<!--<img name="addButton" data-toggle="modal" data-target="#basicModal" src="images/add.png" width="64" height="64" border="0" alt="javascript button" onClick="return addNode();">-->
+			<img name="filterButton" src="images/filter.png" width="64" height="64" border="0" alt="javascript button" onClick="return openFilters();">
+			<!--<img name="removeButton" src="images/remove.png" width="64" height="64" border="0" alt="javascript button" >-->
 			
 		</div>
 		<div class="col-sm-6"  id="comboboxes" style="text-align: center">
@@ -114,11 +114,11 @@
   <div class="row">
     <div class="col-sm-6" style="background-color:lavenderblush;"></div>
     <div class="col-sm-6" style="text-align:center">
-		<img name="bars" src="images/bars.png" width="200" height="150" border="0" alt="javascript button" onClick="return showBars();"style= " border: 4px solid yellow;border-radius: 38px;" >
-        <img name="matrix" src="images/matriz.png" width="200" height="150" border="0" alt="javascript button" onClick="return addNode();"style=" border: 4px solid #6D6D6D;border-radius: 38px;" >
-		<img name="coord" src="images/coord.png" width="200" height="150" border="0" alt="javascript button" onClick="return showParallelCoord();"style=" border: 4px solid #6D6D6D;border-radius: 38px;"  >
-		<img name="dots" src="images/bullets.png" width="200" height="150" border="0" alt="javascript button" onClick="return showDots();"style=" border: 4px solid #6D6D6D;border-radius: 38px;" >
-		<img name="map" src="images/map.png" width="200" height="150" border="0" alt="javascript button" onClick="return showMap();"style=" border: 4px solid #6D6D6D;border-radius: 38px;" >
+		<img name="bars" src="images/bars.png" width="180" height="140" border="0" alt="javascript button" onClick="return showBars();"style= " border: 4px solid yellow;border-radius: 38px;" >
+        <img name="matrix" src="images/matriz.png" width="180" height="140" border="0" alt="javascript button" onClick="return addNode();"style=" border: 4px solid #6D6D6D;border-radius: 38px;" >
+		<img name="coord" src="images/coord.png" width="180" height="140" border="0" alt="javascript button" onClick="return showParallelCoord();"style=" border: 4px solid #6D6D6D;border-radius: 38px;"  >
+		<img name="dots" src="images/bullets.png" width="180" height="140" border="0" alt="javascript button" onClick="return showDots();"style=" border: 4px solid #6D6D6D;border-radius: 38px;" >
+		<img name="map" src="images/map.png" width="180" height="140" border="0" alt="javascript button" onClick="return showMap();"style=" border: 4px solid #6D6D6D;border-radius: 38px;" >
 	</div>
   
 </div>
