update das visualizaçoes quando altera-se filtros

--- a/bootIndex.html
+++ b/bootIndex.html
@@ -185,7 +185,7 @@
 	
     var selection = [];
 	var filters = [];
-    var filteredSelection = [];
+    var filteredSelection = ["all"];
 	
 	var svg_selected = d3.select("#sel_viz").append("svg")
             .attr("width", $("#sel_viz").width())
