--- a/bootIndex.html
+++ b/bootIndex.html
@@ -104,7 +104,11 @@
 		<div class="col-sm-4"  id="viz" style="text-align:center"></div>
 		<div class="col-sm-2"  id="selected_view" ></div>
 		<div class="col-sm-6" id="right_viz" style="text-align:center">
-            <div id="sel_viz"> </div>
+            <img name="nosel"  src="images/no_selection.png" border="0" style="display:flex;justify-content:center;align-items:center;">
+            <img name="nofiltersel"  src="images/no_filter_selection.png" border="0" style="display:none;justify-content:center;align-items:center;">
+            <div id="sel_viz"> 
+                
+            </div>
             <div id="maps"> </div>
 		</div>
 			
@@ -116,9 +120,9 @@
     <div class="col-sm-6" style="text-align:center">
 		<!--<img name="bars" src="images/bars.png" width="180" height="140" border="0" alt="javascript button" onClick="return showBars();"style= " border: 4px solid yellow;border-radius: 38px;" >-->
         <!--<img name="matrix" src="images/matriz.png" width="180" height="140" border="0" alt="javascript button" onClick="return addNode();"style=" border: 4px solid #6D6D6D;border-radius: 38px;" >-->
-		<img name="coord" src="images/coord.png" width="180" height="140" border="0" alt="javascript button" onClick="return showParallelCoord();"style=" border: 4px solid #6D6D6D;border-radius: 38px;"  >
-		<img name="dots" src="images/bullets.png" width="180" height="140" border="0" alt="javascript button" onClick="return showDots();"style=" border: 4px solid #6D6D6D;border-radius: 38px;" >
-		<img name="map" src="images/map.png" width="180" height="140" border="0" alt="javascript button" onClick="return showMap();"style=" border: 4px solid #6D6D6D;border-radius: 38px;" >
+		<img name="coord" src="images/coord.png" width="150" height="120" border="0" alt="javascript button" onClick="return showParallelCoord();"style=" border: 4px solid #6D6D6D;border-radius: 38px;"  >
+		<img name="dots" src="images/bullets.png" width="150" height="120" border="0" alt="javascript button" onClick="return showDots();"style=" border: 4px solid #6D6D6D;border-radius: 38px;" >
+		<img name="map" src="images/map.png" width="150" height="120" border="0" alt="javascript button" onClick="return showMap();"style=" border: 4px solid #6D6D6D;border-radius: 38px;" >
 	</div>
   
 </div>
@@ -204,6 +208,7 @@
 	filterPopup.create();
 	
 	document.getElementById("maps").style = "display:none;";
+    document.getElementById("sel_viz").style = "display:none;";
 
     //updateShownVisualization();
     //var specimensViz = new specimensVisualization;
