alteraCAO DE PART DO SUNBURST NAO FUNCIONA AINDA

--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 	<!-- SETTINGS -->
 	<div class="row">
 		<div class="col-sm-4" >
-			<!--<form>
+			<form>
 			<label><input type="radio" name="mode" value="size"> By number of species </label>
 			<label><input type="radio" name="mode" value="count" checked> By number of specimens</label>
-			</form>-->
+			</form>
 		</div>
 		<div class="col-sm-2" style="background-color:#75C9FF;webkit-border-radius: 11px;border-radius: 15px;text-align: center">
 		
@@ -186,6 +186,7 @@
     var comboSize;
     var comboColor;
 	
+    var showByChildrenNumbers = true;
     var firstTimeMultipleCombos = true;
     var firstTimeCombos = true;
     var selection = [];
