sunburst troca de particionamento + mouseover no dots comentado

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     
     <!--D3-->
     <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script type='text/javascript' src="http://bost.ocks.org/mike/fisheye/fisheye.js?0.0.3"> </script>
     
     <script type="text/javascript" src="sunburst.js"></script>
     <script type="text/javascript" src="selectedVisualization.js"></script>
@@ -84,8 +85,8 @@
 	<div class="row">
 		<div class="col-sm-4" >
 			<form>
-			<label><input type="radio" name="mode" value="size"> By number of species </label>
-			<label><input type="radio" name="mode" value="count" checked> By number of specimens</label>
+			<label><input type="radio" name="mode" value="count" autocomplete="off"> By number of species </label>
+			<label><input type="radio" name="mode" value="size" autocomplete="off" checked > By number of specimens</label>
 			</form>
 		</div>
 		<div class="col-sm-2" style="background-color:#75C9FF;webkit-border-radius: 11px;border-radius: 15px;text-align: center">
