--- a/index.html
+++ b/index.html
@@ -189,6 +189,8 @@
 	
     var showByChildrenNumbers = true;
     var makeDynamicAxis = false;
+    var dynamicCheckbox;
+    var dynamicCheckboxText;
     var firstTimeMultipleCombos = true;
     var firstTimeCombos = true;
     var selection = [];
