--- a/index.html
+++ b/index.html
@@ -227,19 +227,24 @@
         <div class="modal-content">
             <!-- title -->
             <div class="modal-header" id="hder">
-				<h4 class="modal-title" id="analysisModalLabel"></h4>
+                <div class="col-sm-6" >
+                    <h4 class="modal-title" id="analysisModalLabel"></h4>
+                </div>
+                <div class="col-sm-2" ></div>
+                <div class="col-sm-4"  id="analysis_combos" style="text-align:right;margin-top: 20px;"></div>	
             </div>
             <!-- info -->
             <div class="modal-body" id="info-body">
                 <div class="row">
-                    <div class="col-md-6" >
+                    <div class="col-sm-2" ></div>
+                    <div class="col-sm-8">
                         <div id="counting_title" style="text-align:center;"></div>
                         <div class="well" id="counting_text" style="text-align:center;"></div>
                         
                         <div id="analysis_title" style="text-align:center;"></div>
                         <div class="well" id="analysis_text" style="text-align:center;"></div>
                     </div>
-                    <div class="col-md-6" id="analysis_combos" style="text-align:right"></div>
+                    <div class="col-sm-2" ></div>
                 </div>
 				
             </div>
