--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 	<script type="text/javascript" src="js/events.js"></script>
 	<script type="text/javascript" src="js/comboboxHandler.js"></script>
 	<script type="text/javascript" src="js/specimenPopup.js"></script>
+	<script type="text/javascript" src="js/input.js"></script>
 	<script type="text/javascript" src="js/analysisPopup.js"></script>
 	<script type="text/javascript" src="js/filter.js"></script>
     
@@ -223,7 +224,14 @@
             </div>
             <!-- buttons -->
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <div class="col-sm-10" ></div>
+                <div class="col-sm-1" >
+                    <button type="button" class="btn btn-default" data-dismiss="modal" style="text-align:left">Close</button>
+                </div>
+                <div class="col-sm-1" >
+                    <button id="submitButton" type="button" class="btn btn-primary" onClick="submitForm();" style="display:none">Submit</button>
+                </div>
+                
         </div>
     </div>
   </div>
