avanços em editar specimen

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                     <button type="button" class="btn btn-default" data-dismiss="modal" style="text-align:left">Close</button>
                 </div>
                 <div class="col-sm-1" >
-                    <button id="submitButton" type="button" class="btn btn-primary" onClick="submitForm();" style="display:none">Submit</button>
+                    <button id="submitButton" type="button" class="btn btn-primary" style="display:none">Submit</button>
                 </div>
                 
         </div>
