continuando a viz do taxonomy popup

--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
 				
             </div>
             <!-- info -->
-            <div class="modal-body" id="info-body">
-				<div id="info_text"></div>
+            <div class="modal-body"  class="col-sm-12" id="info-body">
+				<div id="info_text" class="col-sm-12" ></div>
                 <ul class="nav nav-tabs" id="measures_tab_list"></ul>
                 <div class="tab-content" id="measures_tab_content"></div>
             </div>
