arrumando erros de filtro e inicio do export

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 	<script type="text/javascript" src="js/filter.js"></script>
 	
 	<script type="text/javascript" src="js/export.js"></script>
+	<script type="text/javascript" src="libs/jquery.fileDownload.js"></script>
     
 	<script type="text/javascript" src="js/databaseInterface/databaseInterface.js"></script>
 	
@@ -93,6 +94,8 @@
 	</div>
 </div>
 
+<!-- PARA O DOWNLOAD DO ARQUIVO -->
+<iframe id="my_iframe" style="display:none;"></iframe>
 
 <div class="container-fluid">
 
