--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 	
 	<script type="text/javascript" src="js/export.js"></script>
 	<script type="text/javascript" src="libs/loadingBar.js"></script>
+	<script type="text/javascript" src="js/login.js"></script>
     
 	<script type="text/javascript" src="js/databaseInterface/databaseInterface.js"></script>
 	
@@ -85,9 +86,9 @@
               </ul>
             </li>
 		</ul>
-		
+
 		<div class="col-sm-1 col-md-1 pull-right">
-			<button type="button" class="btn btn-default navbar-btn">Login</button>
+			<button type="button" class="btn btn-default navbar-btn" onClick="return showLoginPopup();">Login</button>
 		</form>
 		</div>
 		
@@ -312,6 +313,38 @@
                 <button type="button" class="btn btn-primary" onClick="applyFilters();">Apply Filters</button>
         </div>
     </div>
+  </div>
+</div>
+
+<!--login modal-->
+<div id="loginModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog">
+  <div class="modal-content">
+      <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+          <h1 class="text-center">Login</h1>
+      </div>
+      <div class="modal-body">
+          <form class="form col-md-12 center-block">
+            <div class="form-group">
+              <input type="text" class="form-control input-lg" placeholder="Email">
+            </div>
+            <div class="form-group">
+              <input type="password" class="form-control input-lg" placeholder="Password">
+            </div>
+            <div class="form-group">
+              <button class="btn btn-primary btn-lg btn-block">Sign In</button>
+              <span class="pull-right"><a href="#">Register</a></span>
+			  <span><a href="#">Forgot Password?</a></span>
+            </div>
+          </form>
+      </div>
+      <div class="modal-footer">
+          <div class="col-md-12">
+          <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+		  </div>	
+      </div>
+  </div>
   </div>
 </div>
 
