deixando o sunburst bonito

--- a/index.html
+++ b/index.html
@@ -101,21 +101,23 @@
 <div class="container-fluid">
 
     <div class="row">
-        <h1> ----</h1>
+        <h5> ----</h5>
         
     </div>
 
     <div class="row">
         <div class="col-sm-4" style="text-align: center" >
-            <img name="taxtreetitle" src="images/taxonomyTree.png" width="300" height="50" border="0" title="here you can select by right-clicking any specimen you want to visualize">
-            <!--<h1>Taxonomy Tree</h1>-->
+            <!--<img name="taxtreetitle" src="images/taxonomyTree.png" width="300" height="50" border="0" title="here you can select by right-clicking any specimen you want to visualize">-->
+            <h2><b><font color="#8a23b2">Taxonomy Tree</font></b></h2> 
         </div>
         <div class="col-sm-2" style="text-align: center">
-            <img name="filteringtitle" src="images/filtering.png" width="180" height="50" border="0" title="here you can filter the selected specimen you want to visualize">
-        </div>
+            <!--<img name="filteringtitle" src="images/filtering.png" width="180" height="50" border="0" title="here you can filter the selected specimen you want to visualize">-->
+			<h2><b><font color="#2363b2">Filtering</font></b></h2>
+		</div>
         <div class="col-sm-6" style="text-align: center">
-            <img name="viztitle" src="images/visualization.png" width="300" height="45" border="0" title="here you can see the visualizations!">
-        </div>
+            <!--<img name="viztitle" src="images/visualization.png" width="300" height="45" border="0" title="here you can see the visualizations!">-->
+			<h2><b><font color="#62961f">Visualizations</font></b></h2>
+		</div>
     </div>
     
 	<!-- SETTINGS -->
@@ -164,7 +166,7 @@
 	<!-- VISUALIZATIONS -->
 	<div class="row" >
         <!-- sunburst -->
-		<div class="col-sm-4"  id="viz" style="text-align:center"></div>
+		<div class="col-sm-4"  id="viz" style="text-align:center" data-toolbar="user-options"></div>
         <!-- specimens selected -->
 		<div class="col-sm-2"  id="selected_view" ></div>
         <!-- other visualizations -->
