mudanca nas cores e uns bug fixes

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 	
 	<script type="text/javascript" src="js/export.js"></script>
 	<script type="text/javascript" src="libs/loadingBar.js"></script>
+	<script type="text/javascript" src="libs/randomColor-master/randomColor.js"></script>
 	<script type="text/javascript" src="js/login.js"></script>
     
 	<script type="text/javascript" src="js/databaseInterface/databaseInterface.js"></script>
@@ -362,6 +363,7 @@
     var makeDynamicAxis = false;
     var firstTimeMultipleCombos = true;
     var firstTimeCombos = true;
+    var isLoggedIn = false;
     
     // all selected taxonomy and specimen from sunburst
     var selection = [];
