colocando o git em dia

--- a/libs/randomColor-master/demo/index-src.html
+++ b/libs/randomColor-master/demo/index-src.html
@@ -2,12 +2,11 @@
   <head>
     <meta charset="utf-8">
     <title>Random color generator for JavaScript - randomColor.js</title>
-    <link href='//fonts.googleapis.com/css?family=Karla:400,700' rel='stylesheet' type='text/css'>
     <link rel="icon"
           type="image/png"
           href="/demo/favicon.png">
     <script src="/demo/tests.js"></script>
-    <script src="/randomColor.js"></script>
+    <script src="../randomColor.js"></script>
     <style type="text/css">
     @import url(https://fonts.googleapis.com/css?family=Fira+Sans:300,300italic,400,400italic,500,500italic,700,700italic);
     @import url(https://fonts.googleapis.com/css?family=Fira+Mono:400);
